[package]
name = "cmdparse-derive"
version = "0.1.0"
authors = ["Vlad Poletaev <poletaev.vladislav@gmail.com>"]
description = "Derive macro implementation for cmdparse."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/poletaevvlad/cmdparse"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive", "parsing", "extra-traits"] }
linked-hash-map = "0.5.4"

[dev-dependencies]
syn = { version = "1.0", features = ["derive", "parsing", "extra-traits", "full"] }

